# Task-Logger

./: .gitignore  README.md  launcher.py  main.py  pyproject.toml  run_server.py  run_task_logger.bat  run_task_logger_silent.vbs
backend/: __init__.py  database.py  main.py  models.py  schemas.py
backend/routers/: activities.py  settings.py  tasks.py
backend/services/: color.py
frontend/: index.html  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/sections/: Activity.css  Activity.tsx  Courses.css  Courses.tsx  HotkeySetup.css  HotkeySetup.tsx  Improve.css  Improve.tsx  Log.css  Log.tsx  Settings.css  Settings.tsx  Tasks.css  Tasks.tsx
scripts/: create_shortcuts.md
